# terminal-simulator

control_simulator/: CMakeLists.txt  build.sh  multicast.sh  multicast_recv.cpp  terminal.cpp  terminal.sh
control_simulator/include/: airimgrecv.h  airtextrecv.h  ethernet.h  imgmemorymanager.h  logger.h  udp_operation.h  vps4mpcap.h
control_simulator/src/: airimgrecv.cpp  airtextrecv.cpp  ethernet.cpp  imgmemorymanager.cpp  udp_operation.cpp  vps4mpcap.cpp
